regions/prod-us-east-2/vpc.tf
resource "aws_vpc" "vpc_main" {
    cidr_block = "10.0.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames  = true

    tags = {
      "Name" = "python-predictions-${var.environment}-${var.region}-main"
    }
}
